--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,56 @@
+.container{
+    display: flex;
+    height: 100vh;
+}
 
+.menu {
+    background-color: white;
+    display: flex;
+    color: #555;
+    flex-direction: column;
+}
+
+.menu img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.menu_user {
+    display: flex;
+    width: 220px;
+    height: 70px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+}
+
+.contacts .user_img {
+    border-bottom: 1px solid #ccc;
+    height: 70px;
+    display: flex;
+    align-items: center;
+}
+
+.contacts .user_img img {
+    margin-left: 14px;
+}
 
 .main {
     background-color: #eee;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
+/*
 .user {
     display: flex;
     justify-content: space-around;
@@ -12,24 +58,50 @@
     height: 80px;
     align-items: center;
 }
-
+*/
 .user_img {
     display: flex;
-    margin-right: 10px;
+    /*margin-right: 10px;*/
+}
+
+.user_name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.small {
+    font-size: 10px;
 }
 
 .icons {
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     justify-content: space-around;
-    width: 54px;
+    width: 50px;
 }
 
-.d.flex {
+
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #ccc;
+    height: 100px;
+    border-bottom: 1px solid #ccc;
+}
+
+.button button {
+    background-color: rgb(208, 108, 255);
+    border: none;
+    color: white;
+    padding: 15px 35px;
+    font-size: 14px;
+}
+
+/*
+.d-flex {
     display: flex;
 }
-
-.container{
-    height: 100vh;
-}
-
+*/
